# gastronomy

./: Cargo.toml  README.md  dist-workspace.toml  eslint.config.mjs  index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.app.json  user_stories  vite.config.ts
.github/setup/: build-setup.yml
.github/workflows/: build.yml  build_rust.yml  release.yml  release_tauri.yml
gastronomy/: Cargo.toml
gastronomy-cli/: Cargo.toml
gastronomy-cli/src/: app.rs  main.rs  utils.rs
gastronomy-ui/: Cargo.toml  tauri.conf.json
gastronomy-ui/capabilities/: migrated.json
gastronomy-ui/icons/: icon.icns
gastronomy-ui/src/: api.rs  execution_trace.rs  main.rs
gastronomy/src/: chain_query.rs  config.rs  execution_trace.rs  lib.rs  uplc.rs
src/: app.rs  execution_trace.rs  lib.rs  main.rs  uplc.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  main.rs
src-ui/: App.tsx  types.ts
src-ui/components/Debugger/: Debugger.tsx  index.ts
src-ui/components/DebuggerNavigation/: DebuggerNavigation.tsx  index.ts
src-ui/components/DisplayString/: DisplayString.tsx  index.ts
src-ui/components/FilePicker/: FilePicker.tsx
src-ui/components/Modal/: Modal.tsx
src-ui/components/Settings/: Settings.tsx
src/nuplc/: builtins.rs  constant.rs  context.rs  env.rs  mod.rs  state.rs  term.rs  types.rs  value.rs
test_data/: bad_mint_pool.tx  fibonacci.json  fibonacci.uplc  gift.uplc  sample.tx
