[package]
name = "gastronomy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
uplc = { git="https://github.com/SundaeSwap-finance/aiken.git", rev = "68965b52" }
# uplc = { path = "../aiken/crates/uplc" }
num-bigint = "0.4"
pallas = "0.22"
ratatui = { version = "0.26", features = ["all-widgets"] }
crossterm = "0.27"
color-eyre = "0.6"
# pretty = "0.12.3"
hex = "0.4"
