[package]
name = "gastronomy"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/gastronomy"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
uplc = { git="https://github.com/SundaeSwap-finance/aiken.git", rev = "68965b52" }
# uplc = { path = "../aiken/crates/uplc" }
num-bigint = "0.4"
pallas = "0.22"
ratatui = { version = "0.26", features = ["all-widgets"] }
serde = "1"
uuid = { version = "1", features = ["v4"] }
crossterm = "0.27"
color-eyre = "0.6"
# pretty = "0.12.3"
hex = "0.4"

[package.metadata.dist]
dist = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "gastronomy-cli"
path = "src/bin/cli/main.rs"

[workspace]
exclude = ["src-tauri/Cargo.toml"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
