[package]
name = "gastronomy-cli"
version = "0.6.2"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/gastronomy"
description = "Gastronomy CLI"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
crossterm = "0.28"
figment = { version = "0.10", features = ["env", "toml"] }
gastronomy = { path = "../gastronomy" }
ratatui = { version = "0.29", features = ["all-widgets"] }
tokio = { version = "1.41", features = ["full"] }
uplc = { git = "https://github.com/SundaeSwap-finance/aiken.git", rev = "7aa5a43" }
# uplc = { path = "../../aiken/crates/uplc" }

[package.metadata.dist]
dist = true
