[package]
name = "gastronomy-ui"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/gastronomy"
description = "Gastronomy GUI"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
dashmap = "6"
figment = { version = "0.10", features = ["env", "toml"] }
gastronomy = { path = "../gastronomy" }
pallas-codec = "0.30"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "dialog-message", "dialog-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = "1.40"
uuid = { version = "1", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.dist]
dist = false

[package.metadata.release]
pre-release-replacements = [
    { file = "tauri.conf.json", search = "\"version\": \".*\"", replace = "\"version\": \"{{version}}\"" },
]
