[package]
name = "gastronomy"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/gastronomy"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
uplc = { git = "https://github.com/SundaeSwap-finance/aiken.git", rev = "e5a60f3" }
# uplc = { path = "../aiken/crates/uplc" }
num-bigint = "0.4"
pallas = { version = "0.30.1", features = ["applying"] }
serde = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# pretty = "0.12.3"
hex = "0.4"
blockfrost = "1.0.1"
futures = "0.3.30"
reqwest = "0.12"
