[package]
name = "gastronomy"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/gastronomy"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
blockfrost = "1.0.1"
figment = { version = "0.10", features = ["toml"] }
futures = "0.3.30"
hex = "0.4"
home = "0.5"
minicbor = "0.20"
num-bigint = "0.4"
pallas = { version = "0.30.1", features = ["applying"] }
reqwest = "0.12"
serde = "1"
serde_json = "1"
uplc = { git = "https://github.com/SundaeSwap-finance/aiken.git", rev = "e5a60f3" }
# uplc = { path = "../aiken/crates/uplc" }
uuid = { version = "1", features = ["v4"] }
