[package]
name = "gastronomy"
version = "0.6.1"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/gastronomy"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
blockfrost = "1.0.3"
figment = { version = "0.10", features = ["toml"] }
futures = "0.3.31"
hex = "0.4"
home = "0.5"
minicbor = "0.25"
num-bigint = "0.4"
pallas = { version = "0.31.0", features = ["applying"] }
reqwest = "0.12"
serde = "1"
serde_json = "1"
uplc = { git = "https://github.com/SundaeSwap-finance/aiken.git", rev = "7c495c9b" }
# uplc = { path = "../../aiken/crates/uplc" }
